Adjust package.json for router dom

--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "router-dom": "^3.0.3"
   },
   "browserslist": {
     "production": [
